2007-05-15  Boyd Timothy <btimothy@gmail.com> 

	* Banter/ThemeManager.cs: Changed ThemeManager.GetInstance () to be a
	  property instead named "Instance".

2007-05-15  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/banter.in: Fixed up the libdir path that was being set

2007-05-15  Boyd Timothy <btimothy@gmail.com> 

	* Banter.mdp: Rename MessageStyleManager.cs -> ThemeManager.cs.
	* Banter/banter.in: Use @pkglibdir@ instead of @libdir@/@PACKAGE@.
	* Banter/Defines.cs: Renamed this to Defines.cs.in
	* Banter/PreferencesDialog.cs, Banter/MessagesView.cs: Use ThemeManager
	  instead of MessageStyleManager.
	* Banter/Defines.cs.in: Process this file in Makefile.am to create
	  Defines.cs
	* Banter/ThemeManager.cs: This is the new ThemeManager that will
	  control MessageStyles, AppStyles, and ContactStyles.
	* Banter/MessageStyleManager.cs: Renamed to ThemeManager.cs
	* Banter/Makefile.am: Removed all the automatically generated stuff
	  from MonoDevelop and control things ourselves.  Also, generate
	  Defines.cs and the banter script ourselves.

2007-05-15  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added AppStyle.cs and ContactStyle.cs stubbed files to
	  project
	* Banter/ContactStyle.cs: Stubbed out the ContactStyle class
	* Banter/AppStyle.cs: Stubbed out the AppStyle class
	* Banter/Makefile.am: Added the files AppStyle.cs and ContactStyle.cs

2007-05-15 Boyd Timothy <btimothy@gmail.com>

        * configure.ac: Add support for po/LINGUAS file.
	* po/LINGUAS: New file to allow translators to add a new language
	  without having to modify trunk/configure.ac directly.

2007-05-15  Calvin Gaisford <calvinrg@gmail.com> 

        * Banter/Account.cs, Banter/Person.cs, Banter/Conversation.cs: Changed
          the ArrayList to a new and modern List using generics
        * Banter/Connection.cs, Banter/VideoConversation.cs,
          Banter/PersonList.cs, Banter/TelepathyProviderFactory.cs,