@@ -35,6 +35,10 @@ namespace Banter
 		#region Private Types
 		private string stylePath;
 		private string name;
+		private string normalPersonHtml;
+		private string normalActionHtml;
+		private string smallPersonHtml;
+		private string smallActionHtml;	
 		#endregion
 
 
@@ -46,6 +50,14 @@ namespace Banter
 		{
 			get { return name; }
 		}
+		
+		///<summary>
+		///	Returns the path of the Style
+		///</summary>			
+		public string Path
+		{
+			get { return stylePath; }
+		}
 		#endregion
 
 
@@ -56,6 +68,8 @@ namespace Banter
 		public ContactStyle(string path)
 		{
 			this.stylePath = path;
+			ReadNormalHtml();
+			ReadSmallHtml();		
 		}
 		#endregion
 
@@ -72,6 +86,153 @@ namespace Banter
 				return false;
 			}
 			return true;
+		}
+		#endregion
+
+
+		#region Public Methods
+		///<summary>
+		///	Renders the HTML for the widget
+		///</summary>	
+		public string RenderWidgetHtml(Person person, PersonCardSize size)
+		{
+			string widgetHtml = string.Empty;
+			string textChatPng;
+			string videoChatPng;
+			string personHtml;
+			string actionHtml;
+			int avatarSize = 0;
+			string tmpHtml;
+			
+			switch(size) {
+				default:
+				case PersonCardSize.Small:
+					textChatPng = "text-chat-small.png";
+					videoChatPng = "video-chat-small.png";
+					personHtml = smallPersonHtml;
+					actionHtml = smallActionHtml;
+					avatarSize = 16;
+					break;
+				case PersonCardSize.Medium:
+					textChatPng = "text-chat.png";
+					videoChatPng = "video-chat.png";
+					personHtml = normalPersonHtml;
+					actionHtml = normalActionHtml;
+					avatarSize = 48;
+					break;
+				// Haven't created any Large, just use Medium
+				case PersonCardSize.Large:
+					textChatPng = "text-chat.png";
+					videoChatPng = "video-chat.png";
+					personHtml = normalPersonHtml;
+					actionHtml = normalActionHtml;
+					avatarSize = 48;					
+					break;
+			}
+			
+			string avatar = person.GetScaledAvatar(avatarSize);
+
+			if(avatar != null) {
+				tmpHtml = personHtml.Replace("%PERSON_PHOTO%", "file://" + avatar);
+			}
+			else {
+				tmpHtml = personHtml.Replace("%PERSON_PHOTO%", "file://" + System.IO.Path.Combine(stylePath, "blankhead.png"));
+			}
+			
+			tmpHtml = tmpHtml.Replace("%PERSON_DISPLAY_NAME%",  person.DisplayName);
+
+			if(person.Presence.Type == PresenceType.Offline) {
+				tmpHtml = tmpHtml.Replace("%PERSON_STATUS_TEXT%", "offline");
+			}
+			else if (person.PresenceMessage.Length > 0) {
+				tmpHtml = tmpHtml.Replace("%PERSON_STATUS_TEXT%", person.PresenceMessage);
+			}
+			else if(person.Presence.Type == PresenceType.Busy) {
+				tmpHtml = tmpHtml.Replace("%PERSON_STATUS_TEXT%", "busy");
+			}
+			else if(person.Presence.Type == PresenceType.Away) {
+				tmpHtml = tmpHtml.Replace("%PERSON_STATUS_TEXT%", "away");
+			}
+			else {
+				tmpHtml = tmpHtml.Replace("%PERSON_STATUS_TEXT%", "online");
+			}
+			
+			widgetHtml = tmpHtml;
+
+			// change this later to show their capabilities when we actually have them
+			if(person.Presence.Type != PresenceType.Offline) {
+				string tmpActionHtml;			
+
+				tmpHtml = actionHtml.Replace("%ACTION_HREF%", "rtc://TEXT_CHAT");
+				tmpHtml = tmpHtml.Replace("%ACTION_IMAGE%", "file://" + System.IO.Path.Combine(stylePath, textChatPng));
+				tmpActionHtml = tmpHtml;
+				
+				tmpHtml = actionHtml.Replace("%ACTION_HREF%", "rtc://VIDEO_CHAT");
+				tmpHtml = tmpHtml.Replace("%ACTION_IMAGE%", "file://" + System.IO.Path.Combine(stylePath, videoChatPng));
+				tmpActionHtml += tmpHtml;
+
+				widgetHtml = widgetHtml.Replace("<!--ACTION_DATA-->", tmpActionHtml);
+			}
+			
+			return widgetHtml;
+		}
+		#endregion
+
+		
+		#region Private Methods
+		///<summary>
+		///	Reads the NormalHtml from the Theme
+		///</summary>	
+		private void ReadNormalHtml()
+		{
+			System.IO.StreamReader htmlReader;
+			
+			try {
+				htmlReader = new System.IO.StreamReader(System.IO.Path.Combine(stylePath, "person.html"));
+				normalPersonHtml = htmlReader.ReadToEnd();
+			}
+			catch (Exception e) {
+				// must be an invalid Theme
+				throw new ApplicationException("Theme missing person.html");
+			}
+
+
+			try {
+				htmlReader = new System.IO.StreamReader(System.IO.Path.Combine(stylePath, "action.html"));
+				normalActionHtml = htmlReader.ReadToEnd();
+			}
+			catch (Exception e) {
+				// must be an invalid Theme
+				throw new ApplicationException("Theme missing action.html");
+			}
+		}
+
+
+		///<summary>
+		///	Reads the NormalHtml from the Theme
+		///</summary>	
+		private void ReadSmallHtml()
+		{
+			System.IO.StreamReader htmlReader;
+			
+			try {
+				htmlReader = new System.IO.StreamReader(System.IO.Path.Combine(stylePath, "person-small.html"));
+				smallPersonHtml = htmlReader.ReadToEnd();
+			}
+			catch (Exception e) {
+				// must be an invalid Theme
+				throw new ApplicationException("Theme missing person-small.html");
+			}
+
+
+			try {
+				htmlReader = new System.IO.StreamReader(System.IO.Path.Combine(stylePath, "action-small.html"));
+				smallActionHtml = htmlReader.ReadToEnd();
+			}
+			catch (Exception e) {
+				// must be an invalid Theme
+				throw new ApplicationException("Theme missing action-small.html");
+			}
 		}
 		#endregion
 
